--- a/MediMal/src/main/webapp/style/headerStyle.css
+++ b/MediMal/src/main/webapp/style/headerStyle.css
@@ -1,16 +1,20 @@
 @charset "UTF-8";
 
-
-.head1{
-	position:absolute;
-	top: 10px;
-	left:50px;
-	right: 50px;
+.head{
+	width: 100%;
+	height: 70px;
+	background-color: rgb(128, 255, 0);
+	display: flex;
+}
+.head1{position: relative;
+	 top:8px;
+	left:1300px
+	
 }
 
-.head2{
-	/*width: px;
-	height: 100px;*/
-	position: absolute;
-	left:880px
+.head2
+	{position: relative;
+		 top:5px;
+		 margin-left:20px;
+		 left:1300px
 }
