ヘッダー類

--- a/MediMal/src/main/webapp/style/karteHomeStyle.css
+++ b/MediMal/src/main/webapp/style/karteHomeStyle.css
@@ -1,6 +1,6 @@
 @charset "UTF-8";
 body{
-	background-image: url(../image/back4.png);
+	background-image: url(../image/Catback.png);
 	
 	
 	background-color: rgba(#fff, 0.7);
