--- a/MediMal/src/main/webapp/style/menuStyle.css
+++ b/MediMal/src/main/webapp/style/menuStyle.css
@@ -1,7 +1,7 @@
 @charset "UTF-8";
 
 body{
-	background-image: url(../image/back4.png);
+	background-image: url(../image/Catback.png);
 	
 	
 	background-color: rgba(#fff, 0.7);
