--- a/MediMal/src/main/webapp/style/resultSearchStyle.css
+++ b/MediMal/src/main/webapp/style/resultSearchStyle.css
@@ -7,38 +7,44 @@
 
 
 body{
-		background-image: url(../image/back4.png);
-		align-items: center;
-		justify-content: center;
-	
-	}
+		background-image: url(../image/Catback.png);
+		background-position: center;
+		background-size:2500px;
+}
 	
 	
 /*以下　テーブル内スクロールのCSS*/
 
-table {
-    border: 1px solid gray;
-    width: 400px;
-    height: 100px;
-}
 
 .result{
     overflow: auto;
     width: 950px;
-    height: 204px;
+    height: 450px;
+	
+
+	margin-top:80px;
+		margin-right:100px;
+		margin-bottom:200px;
+		margin-left:260px;
+		
 	
 }
 result table{
     margin: 0;
     border-spacing: 0;
-
+	
+	border: 1px solid gray;
+	width: 900px;
+	height: 500px;
+	
+	
 }
 .result td{
     white-space: nowrap;
     border-right: 1px solid #999;
     border-bottom: 1px solid #999;
     background: #FFF;
-    padding: 5px;
+    padding: 40px;
 }
 .result th{
     white-space: nowrap;
