--- a/MediMal/src/main/webapp/style/karteHomeStyle.css
+++ b/MediMal/src/main/webapp/style/karteHomeStyle.css
@@ -1,8 +1,9 @@
 @charset "UTF-8";
 body{
 	background-image: url(../image/Catback.png);
-	background-position-x: right 80px
-	
+	background-position: center;
+	background-size:2500px;
+
 }
 
 .move {
