--- a/MediMal/src/main/webapp/style/seaechKeeperStyle.css
+++ b/MediMal/src/main/webapp/style/seaechKeeperStyle.css
@@ -1,11 +1,10 @@
 @charset "UTF-8";
 
-	body{
-		background-image: url(../image/back4.png);
-		
-		
-		
-	}	
+body{
+	background-image: url(../image/Catback.png);
+	background-position: center;
+	background-size:2500px;
+}
 	.button {
 		width: 200px;
 		height: 50px;
@@ -40,8 +39,8 @@
 	  	  transition    : .3s;         /* なめらか変化 */
 	  	  box-shadow    : 6px 6px 3px #666666;  /* 影の設定 */
 	  	  position: relative;
-		  left:1200px;
-		  bottom: 10px;		
+		  left:1050px;
+		  bottom: 60px;		
 	  	  	
 	  	}
 	  	.KS:hover {
@@ -60,9 +59,16 @@
 	
 	.Keeper{
 		margin: 40px 30px 0px 0px;
-		font-size: 30px;
-	}
+					font-size: 30px;
+					position: relative;
+					bottom: 15px;
 	
+	
+	.test-container {
+				margin: auto;
+			 
+			  text-align: right;
+			  }
 	
 	  
 	  
