--- a/MediMal/src/main/webapp/style/searchAnimalStyle.css
+++ b/MediMal/src/main/webapp/style/searchAnimalStyle.css
@@ -1,11 +1,10 @@
 @charset "UTF-8";
 
-	body{
-		background-image: url(../image/back4.png);
-		
-		
-		
-	}	
+body{
+	background-image: url(../image/Catback.png);
+	background-position: center;
+	background-size:2500px;
+}
 	.btn {
 		width: 200px;
 		height: 50px;
@@ -63,9 +62,9 @@
 			margin: 40px 30px 0px 0px;
 			font-size: 30px;
 			position: relative;
-			bottom: 10px;
+			bottom: 15px;
 		}
-		.test-container {
+		.test-con {
 			margin: auto;
 		 
 		  text-align: right;
