--- a/MediMal/src/main/webapp/style/resultSearchStyle.css
+++ b/MediMal/src/main/webapp/style/resultSearchStyle.css
@@ -11,6 +11,36 @@ body{
 		background-position: center;
 		background-size:2500px;
 }
+
+
+
+
+.btn {
+	margin-top: 60px;
+	width: 200px;
+	height: 50px;
+  display       : inline-block;
+  font-size     : 20pt;        /* 文字サイズ */
+  text-align    : center;      /* 文字位置   */
+  cursor        : pointer;     /* カーソル   */
+  padding       : 12px 12px;   /* 余白       */
+  background    : rgb(255, 255, 255);     /* 背景色     */
+  color         : rgb(0, 0, 0);     /* 文字色     */
+  line-height   : 1em;         /* 1行の高さ  */
+  transition    : .3s;         /* なめらか変化 */
+  box-shadow    : 6px 6px 3px #666666;  /* 影の設定 */
+  position: relative;
+  	 
+  	left:1200px;
+	bottom: 50px;
+}
+.btn:hover {
+  box-shadow    : none;        /* カーソル時の影消去 */}
+
+
+
+
+
 	
 	
 /*以下　テーブル内スクロールのCSS*/
@@ -22,10 +52,10 @@ body{
     height: 450px;
 	
 
-	margin-top:80px;
-		margin-right:100px;
-		margin-bottom:200px;
-		margin-left:260px;
+	margin-top:0px;
+	margin-right:100px;
+	margin-bottom:200px;
+	margin-left:260px;
 		
 	
 }
