--- a/MediMal/src/main/webapp/style/headerStyle.css
+++ b/MediMal/src/main/webapp/style/headerStyle.css
@@ -8,7 +8,7 @@
 }
 .head1{position: relative;
 	 top:8px;
-	left:1300px
+	left:1100px
 	
 }
 
@@ -16,5 +16,12 @@
 	{position: relative;
 		 top:5px;
 		 margin-left:20px;
-		 left:1300px
-}.
+		 left:1100px
+}
+.head3
+	{
+		position: relative;
+				 top:23px;
+				 
+				 
+	}
