--- a/MediMal/src/main/webapp/style/headerStyle.css
+++ b/MediMal/src/main/webapp/style/headerStyle.css
@@ -8,7 +8,7 @@
 }
 .head1{position: relative;
 	 top:8px;
-	left:1100px
+	left:1000px
 	
 }
 
@@ -16,12 +16,14 @@
 	{position: relative;
 		 top:5px;
 		 margin-left:20px;
-		 left:1100px
+		 left:1000px
 }
 .head3
 	{
 		position: relative;
-				 top:23px;
+		width: 20%;
+		height: 30%;
+		top:23px;
 				 
 				 
 	}
