--- a/MediMal/src/main/webapp/style/insertStyle.css
+++ b/MediMal/src/main/webapp/style/insertStyle.css
@@ -41,12 +41,67 @@ body{
 	  box-shadow    : 6px 6px 3px #666666;  /* 影の設定 */
 	  position: relative;
 	  	 
-	  top: 100px;
+	  top: 60px;
 	  	left:630px;
 		bottom: 50px;
 	}
 	.btn:hover {
 	  box-shadow    : none;        /* カーソル時の影消去 */}
+	  
+	  
+	  
+	/*確認画面用のボタン*/
+	
+	/*左*/
+	.btn_left {
+			width: 200px;
+			height: 50px;
+		  display       : inline-block;
+		  font-size     : 20pt;        /* 文字サイズ */
+		  text-align    : center;      /* 文字位置   */
+		  cursor        : pointer;     /* カーソル   */
+		  padding       : 12px 12px;   /* 余白       */
+		  background    : rgb(255, 255, 255);     /* 背景色     */
+		  color         : rgb(0, 0, 0);     /* 文字色     */
+		  line-height   : 1em;         /* 1行の高さ  */
+		  transition    : .3s;         /* なめらか変化 */
+		  box-shadow    : 6px 6px 3px #666666;  /* 影の設定 */
+		  position: relative;
+		  	 
+		  top: 60px;
+		  	left:630px;
+			bottom: 50px;
+		}
+		.btn_left:hover {
+		  box-shadow    : none;        /* カーソル時の影消去 */}
+	  
+	  
+	  
+	  /*右*/
+	  .btn_right {
+	  		width: 200px;
+	  		height: 50px;
+	  	  display       : inline-block;
+	  	  font-size     : 20pt;        /* 文字サイズ */
+	  	  text-align    : center;      /* 文字位置   */
+	  	  cursor        : pointer;     /* カーソル   */
+	  	  padding       : 12px 12px;   /* 余白       */
+	  	  background    : rgb(255, 255, 255);     /* 背景色     */
+	  	  color         : rgb(0, 0, 0);     /* 文字色     */
+	  	  line-height   : 1em;         /* 1行の高さ  */
+	  	  transition    : .3s;         /* なめらか変化 */
+	  	  box-shadow    : 6px 6px 3px #666666;  /* 影の設定 */
+	  	  position: relative;
+	  	  	 
+	  	  top: 60px;
+	  	  	left:630px;
+	  		bottom: 50px;
+	  	}
+	  	.btn_right:hover {
+	  	  box-shadow    : none;        /* カーソル時の影消去 */}
+	  
+	  
+	  
 	  
 	  
 	  
