--- a/MediMal/src/main/webapp/style/doneStyle.css
+++ b/MediMal/src/main/webapp/style/doneStyle.css
@@ -9,7 +9,7 @@ body{
 
 
 .btn {
-		width: 200px;
+		width: 300px;
 		height: 50px;
 	  display       : inline-block;
 	  font-size     : 20pt;        /* 文字サイズ */
@@ -23,9 +23,42 @@ body{
 	  box-shadow    : 6px 6px 3px #666666;  /* 影の設定 */
 	  position: relative;
 	  	 
-	  top: 60px;
-	  	left:630px;
+	  top: 65px;
+	  
 		bottom: 50px;
 	}
 	.btn:hover {
 	  box-shadow    : none;        /* カーソル時の影消去 */}
+	  
+	  
+	  
+	  
+	.around{
+		background-color: rgb(248, 205, 205);
+		width: 780px;
+		height: 300px;
+		margin-left: 330px;
+		margin-top: 120px;
+		padding-top: 50px;
+		padding-left: 35px;
+		padding-right: 35px;
+		border-radius: 20px;
+
+	}
+	
+	
+	.message{
+		text-align: center;
+		font-size: 28px;
+		float: none;
+		background-color:white;
+		width: 410px;
+		height: 210px;
+		margin-top: 10px;
+		padding-top: 35px;
+		padding-left:190px ;
+		padding-right:190px ;
+		border-radius: 20px;
+		
+		
+	}
