--- a/MediMal/src/main/webapp/style/insertStyle.css
+++ b/MediMal/src/main/webapp/style/insertStyle.css
@@ -213,7 +213,7 @@ body{
 						bottom: 30px;
 						font-size: 30px;
 				
-			margin-top: 100px;
+			margin-top: 90px;
 			margin-left: 500px;
 		
 	}
@@ -236,7 +236,51 @@ body{
 
 
 
+.drug {
+	width: 500px;
+	
+	position: relative;
+	bottom: 30px;
+	font-size: 30px;
+					
+	margin-left: 200px;
+	
+}
 
+.birth {
+	
+		width: 500px;
+		position: relative;
+		bottom: 30px;
+		font-size: 30px;
+		left: 730px;	
+		top: 0px;
+		margin-right: 30px;
+		margin-top:50px;
+
+}
+
+/*カルテ情報記録ボタン*/
+.btn_karte {
+	  			width: 200px;
+	  			height: 50px;
+	  		  display       : inline-block;
+	  		  font-size     : 20pt;        /* 文字サイズ */
+	  		  text-align    : center;      /* 文字位置   */
+	  		  cursor        : pointer;     /* カーソル   */
+	  		  padding       : 12px 12px;   /* 余白       */
+	  		  background    : rgb(255, 255, 255);     /* 背景色     */
+	  		  color         : rgb(0, 0, 0);     /* 文字色     */
+	  		  line-height   : 1em;         /* 1行の高さ  */
+	  		  transition    : .3s;         /* なめらか変化 */
+	  		  box-shadow    : 6px 6px 3px #666666;  /* 影の設定 */
+	  		  position: relative;
+	  		  	 
+	  		  	left:600px;
+	  			bottom: 50px;
+	  		}
+	  		.btn_karte:hover {
+	  		  box-shadow    : none;        /* カーソル時の影消去 */}
 
 
 
