--- a/MediMal/src/main/webapp/style/insertStyle.css
+++ b/MediMal/src/main/webapp/style/insertStyle.css
@@ -208,10 +208,9 @@ body{
 	  	
 	  
 	.A{
-		
-				position: relative;
-						bottom: 30px;
-						font-size: 30px;
+			position: relative;
+			bottom: 30px;
+			font-size: 25px;
 				
 			margin-top: 70px;
 			margin-left: 500px;
@@ -231,18 +230,18 @@ body{
 		  text-align: right;
 		  }
 	
-
-
-
+.karte {
+	width: 1000px;
+	height: 800px;
+}
 
 
 .drug {
 	width: 500px;
-	
 	position: relative;
 	bottom: 30px;
 	font-size: 30px;
-					
+		
 	margin-left: 200px;
 	
 }
@@ -256,7 +255,8 @@ body{
 		left: 730px;	
 		top: 0px;
 		margin-right: 30px;
-		margin-top:50px;
+		float: right;
+		
 
 }
 
