--- a/MediMal/src/main/webapp/style/updateAnimalStyle.css
+++ b/MediMal/src/main/webapp/style/updateAnimalStyle.css
@@ -3,7 +3,7 @@ body{
 	background-image: url(../image/Catback.png);
 	background-position: center;
 	background-size:2500px;
-	/*overflow: hidden;*/
+	overflow: hidden;
 }
 
 .A{
