--- a/MediMal/src/main/webapp/style/insertStyle.css
+++ b/MediMal/src/main/webapp/style/insertStyle.css
@@ -240,25 +240,34 @@ body{
 	width: 500px;
 	position: relative;
 	bottom: 30px;
+	left:30px;
 	font-size: 30px;
 		
 	margin-left: 200px;
 	
 }
 
+
+
 .birth {
 	
 		width: 500px;
+		font-size: 30px;
 		position: relative;
 		bottom: 30px;
-		font-size: 30px;
-		left: 730px;	
-		top: 0px;
+		
+		left: 220px;	
+		bottom: 240px;
 		margin-right: 30px;
 		float: right;
 		
 
 }
+
+
+
+		
+
 
 /*カルテ情報記録ボタン*/
 .btn_karte {
@@ -277,12 +286,35 @@ body{
 	  		  position: relative;
 	  		  	 
 	  		  	left:600px;
-	  			bottom: 50px;
+	  			bottom: 550px;
 	  		}
 	  		.btn_karte:hover {
 	  		  box-shadow    : none;        /* カーソル時の影消去 */}
 
-
+			  .animal_back {
+				width: 200px;
+						height: 50px;
+					  display       : inline-block;
+					  font-size     : 20pt;        /* 文字サイズ */
+					  text-align    : center;      /* 文字位置   */
+					  cursor        : pointer;     /* カーソル   */
+					  padding       : 12px 12px;   /* 余白       */
+					  background    : rgb(255, 255, 255);     /* 背景色     */
+					  color         : rgb(0, 0, 0);     /* 文字色     */
+					  line-height   : 1em;         /* 1行の高さ  */
+					  transition    : .3s;         /* なめらか変化 */
+					  box-shadow    : 6px 6px 3px #666666;  /* 影の設定 */
+					  position: relative;
+					  	 
+					  top: 90px;
+					  	left:630px;
+						bottom: 50px;
+			  	  	 
+			  	  
+					
+			  	}
+			  	.animal_back:hover {
+			  	  box-shadow    : none;        /* カーソル時の影消去 */}
 
 
 
