--- a/MediMal/src/main/webapp/style/karteDetailStyle.css
+++ b/MediMal/src/main/webapp/style/karteDetailStyle.css
@@ -5,3 +5,300 @@ body{
 	background-size:2500px;
 
 }
+
+h1{
+	margin-left: 630px;
+}
+
+.kihonnjouhou {
+	font-size: 32px;
+}
+.animal_info {
+	position: relative;
+	font-size: 26px;
+	background-color: white;
+	width: 400px;
+	height: 500px;
+	
+	margin-left: 40px;
+	padding-top: 20px;
+	padding-left: 40px;
+	border-radius: 20px;
+	border: solid 3px;
+	border-color: rgb(255, 0, 128);
+}
+
+
+/*体重*/
+
+
+.weight_h1 {
+	position: relative;
+	font-size: 25px;
+	left: 550px;
+	bottom: 500px;
+}
+
+.weight {
+	position: relative;
+	overflow: auto;
+	width: 450px;
+	height: 100px;
+	font-size: 25px;
+	
+
+	left: 550px;
+	bottom: 500px;
+	
+}
+
+.weight_btn {
+	position: relative;
+	position: relative;
+	font-size: 25px;
+	left: 550px;	
+	bottom: 480px;
+}
+
+.weight table{
+    margin: 0;
+    border-spacing: 0;
+
+}
+
+.weight td{
+    white-space: nowrap;
+    border-right: 1px solid #999;
+    border-bottom: 1px solid #999;
+    background: #FFF;
+    padding: 5px;
+}
+
+
+.weight th{
+    white-space: nowrap;
+    border-right: 1px solid #999;
+    border-bottom: 1px solid #999;
+    background: #f2f2f2;
+    position: sticky;
+    top: 0;
+    left: 0;
+}
+.weight tr:first-child th{
+    border-top: 1px solid #999;
+}
+.weight th:first-child{
+    border-left: 1px solid #999;
+}
+.weight tr:first-child th:first-child{
+    z-index: 1;
+}
+
+
+
+
+
+
+
+
+
+/*食事*/
+
+.feed_h1 {
+	position: relative;
+	font-size: 25px;
+	left: 550px;
+	bottom: 430px;
+}
+
+.feed {
+	position: relative;
+	overflow: auto;
+	width: 450px;
+	height: 100px;
+	font-size: 25px;
+	
+
+	left: 550px;
+	bottom: 400px;
+	
+}
+
+.feed_btn {
+	position: relative;
+	position: relative;
+	font-size: 25px;
+	left: 550px;	
+	bottom: 380px;
+}
+
+.feed table{
+    margin: 0;
+    border-spacing: 0;
+
+
+}
+
+.feed td{
+    white-space: nowrap;
+    border-right: 1px solid #999;
+    border-bottom: 1px solid #999;
+    background: #FFF;
+    padding: 5px;
+}
+
+
+.feed th{
+    white-space: nowrap;
+    border-right: 1px solid #999;
+    border-bottom: 1px solid #999;
+    background: #f2f2f2;
+    position: sticky;
+    top: 0;
+    left: 0;
+}
+.feed tr:first-child th{
+    border-top: 1px solid #999;
+}
+.feed th:first-child{
+    border-left: 1px solid #999;
+}
+.feed tr:first-child th:first-child{
+    z-index: 1;
+}
+
+
+
+
+
+/*投薬履歴*/
+
+.drug_h1 {
+	position: relative;
+	font-size: 25px;
+	left: 1100px;
+	bottom: 430px;
+}
+
+.drug {
+	position: relative;
+	overflow: auto;
+	width: 450px;
+	height: 100px;
+	font-size: 25px;
+	
+
+	left: 1100px;
+	bottom: 400px;
+	
+}
+
+.drug_btn {
+	position: relative;
+	position: relative;
+	font-size: 25px;
+	left: 1100px;	
+	bottom: 380px;
+}
+
+.drug table{
+    margin: 0;
+    border-spacing: 0;
+
+
+}
+
+.drug td{
+    white-space: nowrap;
+    border-right: 1px solid #999;
+    border-bottom: 1px solid #999;
+    background: #FFF;
+    padding: 5px;
+}
+
+
+.drug th{
+    white-space: nowrap;
+    border-right: 1px solid #999;
+    border-bottom: 1px solid #999;
+    background: #f2f2f2;
+    position: sticky;
+    top: 0;
+    left: 0;
+}
+.drug tr:first-child th{
+    border-top: 1px solid #999;
+}
+.drug th:first-child{
+    border-left: 1px solid #999;
+}
+.drug tr:first-child th:first-child{
+    z-index: 1;
+}
+
+
+
+/*コメント*/
+
+.comment_h1 {
+	position: relative;
+	font-size: 25px;
+	left: 1100px;
+	bottom: 430px;
+}
+
+.comment {
+	position: relative;
+	overflow: auto;
+	width: 450px;
+	height: 100px;
+	font-size: 25px;
+	
+
+	left: 1100px;
+	bottom: 400px;
+	
+}
+
+.comment_btn {
+	position: relative;
+	position: relative;
+	font-size: 25px;
+	left: 1100px;	
+	bottom: 380px;
+}
+
+.comment table{
+    margin: 0;
+    border-spacing: 0;
+
+
+}
+
+.comment td{
+    white-space: nowrap;
+    border-right: 1px solid #999;
+    border-bottom: 1px solid #999;
+    background: #FFF;
+    padding: 5px;
+}
+
+
+.comment th{
+    white-space: nowrap;
+    border-right: 1px solid #999;
+    border-bottom: 1px solid #999;
+    background: #f2f2f2;
+    position: sticky;
+    top: 0;
+    left: 0;
+}
+.comment tr:first-child th{
+    border-top: 1px solid #999;
+}
+.comment th:first-child{
+    border-left: 1px solid #999;
+}
+.comment tr:first-child th:first-child{
+    z-index: 1;
+}
