--- a/MediMal/src/main/webapp/style/resultSearchStyle.css
+++ b/MediMal/src/main/webapp/style/resultSearchStyle.css
@@ -6,7 +6,7 @@
 
 
 
-body{overflow-y: hidden;
+body{overflow: hidden;
 		background-image: url(../image/Catback.png);
 		background-position: center;
 		background-size:2500px;
@@ -46,15 +46,11 @@ body{overflow-y: hidden;
 	
 /*以下　テーブル内スクロールのCSS*/
 
-.yo{
-	position: relative;
-	bottom:100px;
-}
 
 .result{
-    overflow: auto;
+   
     width: 950px;
-    height: 450px;
+    height: 150px;
 	
 
 	margin-top:0px;
@@ -97,5 +93,5 @@ result table{
     border-left: 1px solid #999;
 }
 .result tr:first-child th:first-child{
-    z-index: 1;
+    z-index: -1;
 }
