--- a/MediMal/src/main/webapp/style/styleLogin.css
+++ b/MediMal/src/main/webapp/style/styleLogin.css
@@ -65,6 +65,10 @@ input:focus {
   box-shadow: 0 0 5px rgb(255, 255, 128);
 }
 
+.failed{
+  color:red;
+	
+}
 
 .logo{
 	font-family:  Arial Black;
