--- a/MediMal/src/main/webapp/style/karteDetailStyle.css
+++ b/MediMal/src/main/webapp/style/karteDetailStyle.css
@@ -11,21 +11,27 @@ h1{
 }
 
 .kihonnjouhou {
-	font-size: 32px;
+	font-size: 28px;
 }
 .animal_info {
 	position: relative;
-	font-size: 26px;
+	font-size: 23px;
 	background-color: white;
-	width: 400px;
+	width: 360px;
 	height: 500px;
 	
 	margin-left: 40px;
 	padding-top: 20px;
-	padding-left: 40px;
+	padding-left: 30px;
 	border-radius: 20px;
 	border: solid 3px;
 	border-color: rgb(255, 0, 128);
+}
+
+.btn {
+	width: 20px;
+	font-size: 25px;
+	margin-top: 5px;
 }
 
 
@@ -34,20 +40,20 @@ h1{
 
 .weight_h1 {
 	position: relative;
-	font-size: 25px;
-	left: 550px;
+	font-size: 23px;
+	left: 480px;
 	bottom: 500px;
 }
 
 .weight {
 	position: relative;
 	overflow: auto;
-	width: 450px;
+	width: 320px;
 	height: 100px;
-	font-size: 25px;
+	font-size: 20px;
 	
 
-	left: 550px;
+	left: 480px;
 	bottom: 500px;
 	
 }
@@ -55,8 +61,8 @@ h1{
 .weight_btn {
 	position: relative;
 	position: relative;
-	font-size: 25px;
-	left: 550px;	
+	font-size: 18px;
+	left: 480px;	
 	bottom: 480px;
 }
 
@@ -106,20 +112,20 @@ h1{
 
 .feed_h1 {
 	position: relative;
-	font-size: 25px;
-	left: 550px;
+	font-size: 23px;
+	left: 480px;
 	bottom: 430px;
 }
 
 .feed {
 	position: relative;
 	overflow: auto;
-	width: 450px;
+	width: 380px;
 	height: 100px;
-	font-size: 25px;
+	font-size: 20px;
 	
 
-	left: 550px;
+	left: 480px;
 	bottom: 400px;
 	
 }
@@ -127,8 +133,8 @@ h1{
 .feed_btn {
 	position: relative;
 	position: relative;
-	font-size: 25px;
-	left: 550px;	
+	font-size: 18px;
+	left: 480px;	
 	bottom: 380px;
 }
 
@@ -175,30 +181,30 @@ h1{
 
 .drug_h1 {
 	position: relative;
-	font-size: 25px;
-	left: 1100px;
-	bottom: 430px;
+	font-size: 23px;
+	left: 860px;
+	bottom: 850px;
 }
 
 .drug {
 	position: relative;
 	overflow: auto;
-	width: 450px;
+	width: 380px;
 	height: 100px;
-	font-size: 25px;
+	font-size: 20px;
 	
 
-	left: 1100px;
-	bottom: 400px;
+	left: 860px;
+	bottom: 850px;
 	
 }
 
 .drug_btn {
 	position: relative;
 	position: relative;
-	font-size: 25px;
-	left: 1100px;	
-	bottom: 380px;
+	font-size: 18px;
+	left: 860px;
+	bottom: 830px;
 }
 
 .drug table{
@@ -242,30 +248,30 @@ h1{
 
 .comment_h1 {
 	position: relative;
-	font-size: 25px;
-	left: 1100px;
-	bottom: 430px;
+	font-size: 23px;
+	left: 860px;
+	bottom: 785px;
 }
 
 .comment {
 	position: relative;
 	overflow: auto;
-	width: 450px;
+	width:660px;
 	height: 100px;
-	font-size: 25px;
+	font-size: 20px;
 	
 
-	left: 1100px;
-	bottom: 400px;
+	left: 860px;
+	bottom: 785px;
 	
 }
 
 .comment_btn {
 	position: relative;
 	position: relative;
-	font-size: 25px;
-	left: 1100px;	
-	bottom: 380px;
+	font-size: 18px;
+	left: 860px;
+	bottom: 765px;
 }
 
 .comment table{
